[package]
name = "ipv6_tester"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "IPv6 testing tool for client/server communication"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
structopt = "0.3"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
pnet = "0.33"
chrono = "0.4"
